Fix wrapping of contacts

--- a/src/styles/components/AddressBook.scss
+++ b/src/styles/components/AddressBook.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   flex: 2;
   justify-content: flex-start;
+  flex-wrap: wrap;
 
   .contact {
     height: 100px;
@@ -12,6 +13,7 @@
     display: flex;
     margin: 10px;
     cursor: pointer;
+    max-width: calc(50% - 20px);
 
     .MuiAvatar-root {
       width: 60px;
